--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vuetify@3.0.0-beta.10/dist/vuetify.min.css"/> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vuetify@3.0.0-beta.10/dist/vuetify.min.js"/> -->
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
